# daily-ai-brief-audio

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: README.md  launch.json  settings.json
.github/workflows/: ci.yml  claude-review.yml
deploy/: audio-mail-integration.md  audio_email.py  iam-policy.json  scheduled-task-audio.md  validation-handoff.md
deploy/candidates/: .gitignore  README.md  environment.json  sync.py  trigger.py
deploy/delivery/: CUTOVER-production-decoupling.md  README.md  app.py  cdk.json  requirements-dev.txt
deploy/eval/: README.md  app.py  cdk.json  requirements-dev.txt
deploy/eval-harness/: .gitignore  README.md  pricing.json  requirements.txt  run.py  run_matched_batch.sh  ui.py
deploy/feedback/: README.md  app.py  cdk.json  pytest.ini  requirements-dev.txt
deploy/managed-agent/: README.md  agent.json  deployment-validation.json  deployment.json  pytest.ini  requirements-dev.txt
deploy/subscribers/: README.md  app.py  cdk.json  requirements-dev.txt
docs/adr/: 0001-serverless-subscription-architecture.md  0002-iam-and-credentials-for-second-sender-and-fanout.md  0003-subscriber-data-model-and-tokens.md  0004-aws-credentials-for-boto3-in-managed-agents-sandbox.md  0005-cross-run-persistence-store-for-brief-history.md  0006-managed-agents-environment-and-scheduled-deployment.md  0007-porting-the-research-writing-half-into-the-managed-agent.md  0008-skill-content-change-lockstep-and-live-version-push.md  (+9 more)
tests/: conftest.py  test_audio_email_fanout.py  test_smoke.py
(+311 files in other folders)
