[project]
name = "daily-ai-brief-audio"
version = "0.1.0"
description = "Turn the daily AI brief into narrated audio (Amazon Polly) and email it (Amazon SES)."
requires-python = ">=3.11"
dependencies = ["boto3>=1.34"]

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8", "boto3-stubs[polly,s3,ses]>=1.34"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_brief_audio"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
